Full FlaskServer.py , fix in OpenAPI, and changes in templates
